configs/envoy_ext_authz.yaml
# Regression test for https://github.com/envoyproxy/envoy/issues/17344
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local_service
                http_filters:
                  - name: envoy.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      failure_mode_allow: false
                      transport_api_version: V3
                      status_on_error:
                        code: 503
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext_authz-service
                        timeout: 0.5s
                      with_request_body:
                        max_request_bytes: 10240
                        allow_partial_message: true
                        pack_as_bytes: false
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: local_service
      connect_timeout: 30s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: main
                      port_value: 8080
    - name: ext_authz-service
      type: strict_dns
      lb_policy: round_robin
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_authz-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: opa
                      port_value: 80
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
